# ProjetAstroI04

./: BarnesHut.cpp  BarnesHut.hpp  CMakeLists.txt  Euler.cpp  Euler.hpp  Initialize.cpp  Initialize.hpp  Leapfrog.cpp  Leapfrog.hpp  Makefile  Octree.cpp  Octree.hpp  Parameter.hpp  Parser.cpp  Parser.hpp  ParserAstro.hpp  Particule.cpp  Particule.hpp  README.md  Real.hpp  RealTimePlayer.cpp  RealTimePlayer.hpp  Scheme.hpp  Simulator.cpp  Simulator.hpp  TODO  Universe.cpp  Universe.hpp  Vector.hpp  Visualisation.hpp  astro.hpp  main.cpp
Exemples/: init_2corps  init_3corps  init_SystemeSolaire  init_innerSystemeSolaire  param_2corps  param_3corps  param_SystemeSolaire  param_galaxy  param_innerSystemeSolaire  param_random
